--- a/Swift-Vending-Android/app/src/main/res/layout-land/signin_page.xml
+++ b/Swift-Vending-Android/app/src/main/res/layout-land/signin_page.xml
@@ -5,23 +5,21 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="431dp"
-        android:layout_height="162dp"
-        android:layout_weight="0.54"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
         app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:hint="Email"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
 
 
         />
@@ -39,13 +37,6 @@
         />
 
 
-    <ProgressBar
-        android:id="@+id/bar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="189dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
-
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
@@ -54,8 +45,8 @@
         android:layout_marginLeft="0dp"
         android:layout_marginTop="33dp"
         android:background="@drawable/login_shape"
-        android:text="@string/login_dialog"
         android:onClick="buttonClickFunction"
+        android:text="@string/login_dialog"
 
 
         />
