--- a/Swift-Vending-Android/app/src/main/res/layout-land/activity_history.xml
+++ b/Swift-Vending-Android/app/src/main/res/layout-land/activity_history.xml
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/logo"
             android:layout_marginTop="-60dp"
+            android:layout_marginLeft="30dp"
             android:layout_alignParentStart="true" />
         <!--android:layout_marginBottom="118dp"-->
 
