--- a/Swift-Vending-Android/app/src/main/res/layout-land/main.xml
+++ b/Swift-Vending-Android/app/src/main/res/layout-land/main.xml
@@ -8,7 +8,8 @@
 
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:weightSum="1">
     <Button
         android:id="@+id/btn_history"
         android:layout_width="wrap_content"
@@ -21,7 +22,8 @@
         android:layout_height="wrap_content"
         android:text="Logout"
         android:textAllCaps="false"
-        android:layout_marginLeft="170dp"/>
+        android:layout_marginLeft="390dp"
+        android:layout_weight="0.79" />
 </LinearLayout>
 
     <LinearLayout
@@ -41,16 +43,8 @@
                 android:layout_height="match_parent" />
 
         </com.example.abdooooo.myapplication.camera.CameraSourcePreview>
-        <TextView
-            android:id="@+id/hintt"
-            android:text="
-            Tap the box to view item info"
-            android:textSize="20sp"
-            android:layout_width="match_parent"
-            android:layout_height="71dp" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
